# caducode

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
caducode/: __init__.py  agent.py  cli.py  config.py  exceptions.py  execution.py  models.py  printer.py  prompts.py  repl.py  utils.py
caducode/ui/: __init__.py  app.py
caducode/ui/styles/: app.tcss
caducode/ui/widgets/: __init__.py  input_bar.py  message_view.py
