[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caducode"
version = "0.4.0"
description = "Minimalist coding agent with a single run_python tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Cadu" },
]
keywords = ["ai", "agent", "coding", "llm", "ollama", "pydantic-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "click",
    "httpx",
    "pydantic-ai",
    "rich",
]

[project.urls]
Homepage = "https://github.com/cadu/caducode"
Repository = "https://github.com/cadu/caducode"
Issues = "https://github.com/cadu/caducode/issues"

[project.scripts]
caducode = "caducode:cli"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[tool.mypy]
strict = true
python_version = "3.14"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
